[gd_scene load_steps=16 format=2]

[ext_resource path="res://Cinematics/Cinematic.tscn" type="PackedScene" id=1]
[ext_resource path="res://Cinematics/Closing.gd" type="Script" id=2]
[ext_resource path="res://Cinematics/art/Intro_base_scene.png" type="Texture" id=3]
[ext_resource path="res://Cinematics/art/Intro_Alanis_0.png" type="Texture" id=4]
[ext_resource path="res://Cinematics/art/Intro_FireArea_0.png" type="Texture" id=5]
[ext_resource path="res://Cinematics/art/Intro_FireArea_1.png" type="Texture" id=6]
[ext_resource path="res://Cinematics/art/Intro_FireArea_2.png" type="Texture" id=7]
[ext_resource path="res://Cinematics/art/Intro_FireArea_3.png" type="Texture" id=8]
[ext_resource path="res://Cinematics/art/Intro_FireArea_4.png" type="Texture" id=9]
[ext_resource path="res://Cinematics/art/Intro_FireArea_5.png" type="Texture" id=10]
[ext_resource path="res://Cinematics/CreditsBlock.tscn" type="PackedScene" id=11]

[sub_resource type="Animation" id=1]

resource_name = "Intro"
length = 2.0
loop = false
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Closing/Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Closing/TextBox/NPPainel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "Outro"
length = 1.0
loop = false
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Closing/Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Closing/TextBox/NPPainel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Closing/CreditsBlock")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ false ],
"method": "enabled"
}, {
"args": [ true ],
"method": "enabled"
} ]
}

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Closing" index="0" instance=ExtResource( 1 )]

anims/Intro = SubResource( 1 )
anims/Outro = SubResource( 2 )
script = ExtResource( 2 )

[node name="TextBox" parent="." index="0"]

editor/display_folded = true

[node name="NPPainel" parent="TextBox" index="0"]

modulate = Color( 1, 1, 1, 0 )
_sections_unfolded = [ "Anchor", "Margin", "Patch Margin", "Visibility" ]

[node name="Background" type="Sprite" parent="." index="1"]

position = Vector2( 450, 350 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Alanis" type="AnimatedSprite" parent="Background" index="0"]

frames = SubResource( 3 )
animation = "default"
_sections_unfolded = [ "Transform" ]

[node name="FirePlace" type="AnimatedSprite" parent="Background" index="1"]

frames = SubResource( 4 )
animation = "default"
frame = 2
playing = true

[node name="CreditsBlock" parent="." index="2" instance=ExtResource( 11 )]

[connection signal="finished_dialog" from="CreditsBlock" to="." method="_on_CreditsBlock_finished_dialog"]


[editable path="TextBox"]
